logs/Slang/generated/yosys/asicworld_code_verilog_tutorial_fsm_full_tb.sv.log
name: asicworld_code_verilog_tutorial_fsm_full_tb
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_fsm_full_tb.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_fsm_full_tb.v:10:10: error: use of undeclared identifier '$fopen'
  file = $fopen(`outfile);
         ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_fsm_full_tb.v:10:17: error: unknown macro or compiler directive '`outfile'
  file = $fopen(`outfile);
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_fsm_full_tb.v:11:3: error: use of undeclared identifier '$fdisplay'
  $fdisplay(file, "Time\t    R0 R1 R2 R3 G0 G1 G2 G3");
  ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_fsm_full_tb.v:32:3: error: use of undeclared identifier '$fdisplay'
  $fdisplay(file, "%g\t    %b  %b  %b  %b  %b  %b  %b  %b", 
  ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_fsm_full_tb.v:41:1: error: unknown module 'fsm_full'
fsm_full U_fsm_full(
^~~~~~~~
